--- a/v12/views/index.hbs
+++ b/v12/views/index.hbs
@@ -2,20 +2,14 @@
 
 <h2>Upload Photos</h2>
 <form id="upload-form" action="/" method="POST" enctype="multipart/form-data">
-  <h2>Select an image to upload:</h2>
+  <h2>Select a pill bottle image to upload:</h2>
   <div class="upload-container"><input id="file-picker" type="file" name="image"></div>
   <div><input type="submit" value="Upload Image"></div>
 </form>
 
 <p id="message">{{message}}</p>
 
-<h2>Generated Thumbnails</h2>
-{{#each this.thumbnails}}
-  <img src="https://{{../accountName}}.blob.core.windows.net/{{../containerName}}/{{name}}">
-{{/each}}
-
 <hr>
-<p>This app has no official privacy policy. Your data will be uploaded to a service in order to produce a thumbnail. Your images will be public once you upload them and there is no automated way to remove them.</p>
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
