--- a/v12/views/index.hbs
+++ b/v12/views/index.hbs
@@ -1,6 +1,6 @@
-<h1>Image Resizer</h1>
+<h1>HCHB Pill bottle image uploader</h1>
 
-<h2>Upload Photos</h2>
+<h2>Upload</h2>
 <form id="upload-form" action="/" method="POST" enctype="multipart/form-data">
   <h2>Select a pill bottle image to upload:</h2>
   <div class="upload-container"><input id="file-picker" type="file" name="image"></div>
